fix main page header on mobile

--- a/_sass/partials/_hero.scss
+++ b/_sass/partials/_hero.scss
@@ -1,91 +1,91 @@
 .top-section-hero {
-    width: 100%;
-    height: 100%;
-    padding-top: 0;
+  width: 100%;
+  height: 100%;
+  padding-top: 0;
 
-    .content-wrapper {
-        height: 100vh !important;
+  .content-wrapper {
+    height: 100vh !important;
 
-        & > video {
-            position: absolute;
-            right: 0;
-            bottom: 0;
-            width: auto;
-            min-width: 100%;
-            height: auto;
-            min-height: 100%;
-            background: #000;
-            background-size: cover;
-        }
-
-        & > .jumbotron {
-            text-align: center;
-            position: relative;
-            top: 50%;
-            margin: 0;
-            left: 0;
-            transform: translateY(-60%);
-            @media (max-width: 767px) {
-                margin: 0;
-                padding: 0;
-            }
-            p {
-                font-size: $base-font-size * 2;
-                font-weight: $light;
-                margin-bottom: 15px;
-            }
-            .btn {
-                margin: 0 3px;
-            }
-        }
+    & > video {
+      position: fixed;
+      right: 0;
+      bottom: 0;
+      width: auto;
+      min-width: 100%;
+      height: auto;
+      min-height: 100%;
+      background: #000;
+      background-size: cover;
     }
+
+    & > .jumbotron {
+      text-align: center;
+      position: relative;
+      top: 50%;
+      margin: 0;
+      left: 0;
+      transform: translateY(-60%);
+      @media (max-width: 767px) {
+        margin: 0;
+        padding: 0;
+      }
+      p {
+        font-size: $base-font-size * 2;
+        font-weight: $light;
+        margin-bottom: 15px;
+      }
+      .btn {
+        margin: 0 3px;
+      }
+    }
+  }
 }
 .typeout-fallback {
-    display: none;
-    @media (max-width: 767px) {
-        display: inline-block;
-    }
+  display: none;
+  @media (max-width: 767px) {
+    display: inline-block;
+  }
 }
 .explore {
-    margin-left: -16px;
-    position: absolute;
-    bottom: -0;
-    left: 50%;
-    animation: callToAction 3.5s linear 0s infinite;
-    @media (max-width: 767px) {
-        margin-left: -12.5px;
-        bottom: 30px;
-        animation: none;
-    }
+  margin-left: -16px;
+  position: absolute;
+  bottom: -0;
+  left: 50%;
+  animation: callToAction 3.5s linear 0s infinite;
+  @media (max-width: 767px) {
+    margin-left: -12.5px;
+    bottom: 30px;
+    animation: none;
+  }
 }
 .icon-arrow-down {
-    width: 32px;
-    height: 32px;
-    fill: #e6e6e6;
-    @media (max-width: 767px) {
-        width: 24px;
-        height: 24px;
-    }
+  width: 32px;
+  height: 32px;
+  fill: #e6e6e6;
+  @media (max-width: 767px) {
+    width: 24px;
+    height: 24px;
+  }
 }
 @keyframes callToAction {
-    0% {
-        opacity: 0;
-        transform: translateY(-16px);
-    }
-    25% {
-        opacity: 1;
-        transform: translateY(0);
-    }
-    75% {
-        opacity: 1;
-        transform: translateY(0);
-    }
-    85% {
-        opacity: 0;
-        transform: translateY(-16px);
-    }
-    100% {
-        opacity: 0;
-        transform: translateY(-16px);
-    }
+  0% {
+    opacity: 0;
+    transform: translateY(-16px);
+  }
+  25% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  75% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  85% {
+    opacity: 0;
+    transform: translateY(-16px);
+  }
+  100% {
+    opacity: 0;
+    transform: translateY(-16px);
+  }
 }
